fix:[PD-1579] PLP horizontal scroll

--- a/src/component/ProductItem/ProductItem.style.scss
+++ b/src/component/ProductItem/ProductItem.style.scss
@@ -485,6 +485,10 @@
       width: 100%;
       display: inline-block;
     }
+    .product-description-block{
+      display: inline-block;
+      width: 100%;
+    }
   }
 
   .tagsForMsiteProduct {
